--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,23 +146,39 @@ nav ul li {
 .more-about p {
   line-height: var(--line-height);
   padding: 0.4rem;
+  text-align: left;
 }
 
 /* Skills */
 .skills {
-  max-width: 68.75rem;
-  margin: auto;
+  /* max-width: 68.75rem; */
+  /* margin: auto; */
   text-align: center;
-  margin-top: 2.5rem;
+  /* margin-top: 2.5rem; */
+  padding: 1rem 6rem;
 }
 
 .skill-header {
-  margin-bottom: 1rem;
+  text-align: center;
+  margin-bottom: var(--bottom-margin);
 }
 
-.skills-wrapper img {
-  padding: 1.25rem;
+.skill-body {
+  /* list-style-type: disc; */
+  text-align: left;
+  line-height: var(--line-height);
+  /* padding: 0.4rem; */
+  max-width: 60rem;
+  margin: auto;
 }
+
+.skill-titles {
+  color: var(--primary-color);
+}
+
+/* .skills-wrapper img {
+  padding: 1.25rem;
+} */
 
 .icon {
   width: 11.875rem;
