--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,7 +146,7 @@ nav ul li {
 .more-about p {
   line-height: var(--line-height);
   padding: 0.4rem;
-  text-align: left;
+  text-align: justify;
 }
 
 /* Skills */
@@ -222,16 +222,22 @@ nav ul li {
   padding: 1rem;
 }
 
+/* .project-container div {
+  flex: 1;
+} */
+
 .project-container p {
   padding: 0.4rem;
 }
 
 .project-title {
   margin-bottom: var(--bottom-margin);
+  color: var(--primary-color);
 }
 
 .project-details {
   margin-bottom: var(--bottom-margin);
+  text-align: justify;
 }
 
 .project-card {
@@ -240,6 +246,60 @@ nav ul li {
   box-shadow: 0 3px 10px var(--primary-shadow);
   padding: 20px;
   margin: 10px;
+}
+
+/* Project slideshows */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.slide-fade {
+  display: none;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: var(--primary-color);
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  /* left: 0; */
+  /* right: 85%; */
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev {
+  left: 0;
+}
+
+.number-text {
+  color: var(--primary-color);
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 /* Contact */
