--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,7 +176,7 @@ nav ul li {
   color: var(--primary-color);
 }
 
-.icon {
+/* .icon {
   width: 11.875rem;
   height: 11.25rem;
 }
@@ -187,7 +187,7 @@ nav ul li {
   box-shadow: 0 3px 10px var(--secondary-shadow);
   padding: 20px;
   margin: 10px;
-}
+} */
 
 /* Projects */
 .projects {
@@ -216,10 +216,13 @@ nav ul li {
   text-align: center;
   width: 21.875rem;
   padding: 1rem;
+  height: 30rem;
+
+  position: relative;
 }
 
 .project-container p {
-  padding: 0.4rem;
+  /* padding: 0.4rem; */
 }
 
 .project-title {
@@ -230,6 +233,14 @@ nav ul li {
 .project-details {
   margin-bottom: var(--bottom-margin);
   text-align: justify;
+}
+
+.project-links {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 21.875rem;
+  padding-bottom: 1rem;
 }
 
 .project-card {
