--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,7 +113,7 @@ nav ul li {
 .hero img {
   height: 27.7rem;
   width: 36rem;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
 }
 
 .bio {
@@ -332,7 +332,7 @@ nav ul li {
   text-align: center;
   width: 21.875rem;
   padding: 1rem;
-  height: 30rem;
+  /* height: 30rem; */
 }
 
 .art-title {
@@ -492,14 +492,17 @@ footer {
   }
 
   .hero {
-    margin-top: -4rem;
+    /* margin-top: -4rem; */
     flex-direction: column;
-    gap: 0;
+    gap: 3rem;
   }
 
   .hero img {
         /* height: 37.5rem; */
-        width: 25rem;
+        /* width: 27rem; */
+        height: 20rem;
+        width: 26rem;
+        /* margin-bottom: 3rem; */
     }
 
   .bio {
@@ -562,7 +565,7 @@ footer {
 
 @media screen and (max-width: 420px) {
   .hero img {
-    /* height: 37.5rem; */
+    height: 17.7rem;
     width: 23rem;
   }
 
