--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,7 +113,7 @@ nav ul li {
 .hero img {
   height: 27.7rem;
   width: 36rem;
-  /* margin-bottom: 3rem; */
+  margin-bottom: 3rem;
 }
 
 .bio {
@@ -121,6 +121,7 @@ nav ul li {
   padding: 0.625rem;
   border-radius: 6px;
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+  margin-bottom: 3rem;
 }
 
 .bio h1 {
@@ -502,7 +503,7 @@ footer {
         /* width: 27rem; */
         height: 20rem;
         width: 26rem;
-        /* margin-bottom: 3rem; */
+        margin-bottom: 3rem;
     }
 
   .bio {
@@ -567,6 +568,7 @@ footer {
   .hero img {
     height: 17.7rem;
     width: 23rem;
+    margin-bottom: 3rem;
   }
 
   .bio {
