--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -579,6 +579,10 @@ footer {
     width: 17.875rem;
   }
 
+  .art-container {
+    width: 17.875rem;
+  }
+
   .project-links {
     width: 17.875rem;
   }
