--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,10 +325,10 @@ nav ul li {
   margin-top: 2rem;
 }
 
-.art-pic {
+/* .art-pic { */
   /* width: 65%; */
   /* height: 60%; */
-}
+/* } */
 
 .arts-container {
   display: flex;
