--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -522,7 +522,7 @@ footer {
     /* margin-top: -4rem; */
     flex-direction: column;
     gap: 1rem;
-    1rem 3.5rem
+    padding: 1rem 3.5rem
   }
 
   .hero img {
